--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@uiw/react-md-editor": "^4.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
+    "html2pdf.js": "^0.10.3",
     "inngest": "^3.38.0",
     "lucide-react": "^0.511.0",
+    "marked": "^16.0.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
